--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -2,6 +2,6 @@
   font-family: "Roboto", "sans-serif";
   font-size: 18px;
   line-height: 1.14;
-  text-transform: capitalize;
+  color: dimgrey;
   margin-bottom: 10px;
 }
